--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <title>Excursion</title>
+  </head>
+  <body>
+    <div id="top">
+      <h1>Discover hidden places in the world around you</h1>
+      <a href="">Download Excursion (Coming soon!)</a> <p>
+      <video src="resources/videos/excursion.mp4" autoplay> </video>
+    <div>
+
+    <div id="middle">
+      <h2>Your personal travel guide</h2>
+      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"/> <p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/>
+    </div>
+
+    <div id="bottom">
+      <h2>Coming Soon for iPhone and Android</h2>
+      <a href="">Download Excursion (Coming soon!)</a>
+    </div>
+    <div id="footer">
+      <p>© Excursion</p>
+    </div>
+  </body>
+</html>
